fix(home): set max width for statestring for wrap

--- a/src/views/home/home.module.css
+++ b/src/views/home/home.module.css
@@ -4,6 +4,7 @@
 
 .stateString {
   text-transform: lowercase;
+  max-width: calc(100% - 305px);
 }
 
 @media (max-width: 768px) {
